<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form.FormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="10dp"
                        android:layout_height="58dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_data_encryption" />

                    <TextView
                        android:id="@+id/form_titleEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/addPsw"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/form_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="13"
                        android:hint="@string/title_form"
                        android:inputType="textPersonName" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_searchImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:clickable="false"
                        android:src="@drawable/ic_image_black_24dp"
                        android:visibility="visible"
                        app:backgroundTint="@color/colorAccent"
                        app:fabSize="mini" />

                    <ImageView
                        android:id="@+id/new_imageLogo"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/addLabel"
                        android:onClick="open"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_no_image" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/form_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/user_form"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/form_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="13"
                        android:hint="@string/password"
                        android:inputType="textPersonName"
                        android:scrollbars="horizontal" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_alea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:fabSize="mini"
                        app:srcCompat="@android:drawable/stat_notify_sync" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/form_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/url"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/infos"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <MultiAutoCompleteTextView
                        android:id="@+id/form_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="3"
                        android:overScrollMode="always"
                        android:paddingRight="10dp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_folder"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_folders"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:prompt="@string/spinner_select"
                    android:spinnerMode="dialog"
                    android:text="@string/spinner_select" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/greenDark"
                    android:padding="10dp"
                    android:text="@string/save"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>