<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_connexion_padding"
        android:layout_marginTop="@dimen/activity_connexion_padding_top">

        <ImageView
            android:id="@+id/imageConnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/connect"
            app:srcCompat="@drawable/ic_3275432" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="@dimen/activity_connexion_layout_x/"
        tools:layout_editor_absoluteY="@dimen/activity_connexion_layout_x">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_connexion_textview5_margin_top"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_connexion_textview5_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_connexion_textview6_textsize"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_connexion_button_pd_mb"
            android:background="@color/greenDark"
            android:padding="@dimen/activity_connexion_button_pd_mb"
            android:textSize="@dimen/activity_connexion_button_textsize"
            android:text="@string/connect"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>