<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="10dp"
                    android:layout_height="58dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_build_black_24dp" />

                <TextView
                    android:id="@+id/form_titleEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/action_settings"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rgpd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_info" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rgpd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/csv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_grid_on_black_24dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/excel" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/delete_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_delete_sweep" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="362dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>