<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/psw_image"
                        android:layout_width="73dp"
                        android:layout_height="58dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_no_image" />

                    <TextView
                        android:id="@+id/psw_title"
                        android:layout_width="273dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_form" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/psw_user"
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <ImageView
                        android:id="@+id/imageCopy_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_content_copy" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/psw_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:scrollbars="horizontal" />

                    <ImageView
                        android:id="@+id/imageVisibiliteOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="15dp"
                        app:srcCompat="@drawable/ic_visibility_off" />

                    <ImageView
                        android:id="@+id/imageCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_content_copy" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_psw_url"
                    android:layout_width="352dp"
                    android:layout_height="wrap_content"
                    android:text="@string/url" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/psw_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btn_send_url_psw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_send_white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_psw_infos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infos" />

                <EditText
                    android:id="@+id/psw_infos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/title_psw_dateInsert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_insert" />

                <EditText
                    android:id="@+id/psw_insert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/date_update"
                        android:textAlignment="viewEnd" />

                    <TextView
                        android:id="@+id/psw_dateUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:text="15/10/2020" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>